<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu1"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/profile_information"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2"
        android:icon="@drawable/ic_menu_trip"
        android:title="@string/trip_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu6"
        android:icon="@drawable/ic_menu_wallet"
        android:title="@string/wallet"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu3"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu4"

        android:icon="@drawable/ic_menu_referandearn"
        android:title="@string/refer_to_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu5"

        android:icon="@drawable/ic_menu_help"
        android:title="@string/help_amp_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu8"

        android:icon="@drawable/ic_faq"
        android:title="@string/faq"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu7"

        android:icon="@drawable/ic_menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>