<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <View
                android:layout_width="15dp"
                android:layout_height="20dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/creatimg" />
            <View
                android:layout_width="15dp"
                android:layout_height="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_weight="1"

                        android:background="@drawable/rounded_input"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:padding="5dp" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="1dp" />

                    <EditText
                        android:id="@+id/ed_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_input"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:padding="5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/ed_eamil"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/rounded_input"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_input"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/spinner"
                            android:background="@null"
                            android:layout_width="fill_parent"
                            android:editable="false"
                            android:layout_height="35dp" />


                    </LinearLayout>

                    <EditText
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:background="@null"
                        android:hint="@string/mobile"
                         />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/ed_referal"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/rounded_input"
                    android:hint="@string/referral_code_optional"
                    android:inputType="phone"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/rounded_input"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="5dp" />

                    <ImageView
                        android:id="@+id/show_pass_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="ShowHidePass"
                        android:padding="5dp"

                        android:src="@drawable/eye" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


                <TextView
                    android:id="@+id/txt_teram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/by_clicking_sing_in"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/sing_up"
                    android:theme="@style/AppTheme.Button" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_input"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/old_user_register"
                    android:textColor="@color/black"
                    android:theme="@style/AppTheme.Button" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>