<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|start"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="2dp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/your_account_details"
                    style="@style/Font"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/ed_firstname"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/rounded_input"
                android:backgroundTint="#F3F3FA"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="8dp"
                android:text="Mauyurfgf"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/ed_lastname"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_input"
                android:backgroundTint="#F3F3FA"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/ed_eamil"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/rounded_input"
                android:backgroundTint="#F3F3FA"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/rounded_input"
                android:backgroundTint="#F3F3FA"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mobile" />

            <TextView
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_input"
                android:backgroundTint="#F3F3FA"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:padding="5dp"
                android:textSize="16dp"
                android:gravity="center|start"
                android:editable="false"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/update"
                android:theme="@style/AppTheme.Button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>