<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top"
        android:gravity="center|top"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            style="@style/Font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/pick_up"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_round_drop" />

            <AutoCompleteTextView
                android:id="@+id/txt_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_weight="1"

                android:background="@drawable/rounded_input"
                android:hint="@string/search_for_an_address_or_landmark"
                android:padding="10dp"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_round_pickup" />

            <AutoCompleteTextView
                android:id="@+id/txt_drop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_weight="1"

                android:background="@drawable/rounded_input"
                android:hint="@string/enter_destination"
                android:padding="10dp"
                android:singleLine="true" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/btn_conti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/continues"
            android:theme="@style/AppTheme.Button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>
</LinearLayout>