<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/loginimg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/gilroyblack"
                android:gravity="center"
                android:padding="5dp"
                style="@style/Font"
                android:text="@string/create_an_account"
                android:textColor="@color/black"
                android:textSize="24dp"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroyblack"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/welcome_friend_enter_your_details_so_lat_get_started_in_booking_taxi" />

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/enter_your_phone"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/enter_your_phone"
                    android:inputType="phone"
                    android:padding="5dp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rlt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:padding="5dp">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/show_pass_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="ShowHidePass"
                    android:padding="5dp"

                    android:src="@drawable/eye" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txt_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dp"
                    style="@style/Font"
                    android:text="@string/forgot_password"
                    android:textColor="@color/purple_700" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/continues"
                android:theme="@style/AppTheme.Button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    style="@style/Font"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@color/gray" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_input"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sing_up"
                android:textColor="@color/black"
                android:theme="@style/AppTheme.Button" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>